--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="個人YouTubeクリエイターのための会計システム"
+    />
+    <meta
+      name="google-signin-client_id"
+      content="1036347108660-98t4umuarpc3b92ort13mqp3ld65j0te.apps.googleusercontent.com"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
